added auth mechanism for mcp servers
